# Verifile

./: Cargo.toml  test.txt
.github/workflows/: crate-publish.yml
src/: crc32.rs  database.rs  hash.rs  main.rs
