[package]
name = "Verifile"
version = "0.1.0"
edition = "2021"

authors = ["initialencounter <2911583893@qq.com>"]
license = "AGPL-3.0"
description = "Read MFT and USN journal"
repository = "https://github.com/initialencounter/Verifile"
keywords = ["filesystem", "ntfs"]
categories = ["filesystem"]

[dependencies]
ntfs-reader = "0.4.0"
