[package]
name = "Verifile"
version = "0.1.0"
edition = "2021"

authors = ["initialencounter <2911583893@qq.com>"]
license = "AGPL-3.0"
description = "Read MFT and USN journal"
repository = "https://github.com/initialencounter/Verifile"
keywords = ["filesystem", "ntfs"]
categories = ["filesystem"]

[dependencies]
blake2 = "0.10.6"
crc32fast = "1.4.2"
ntfs-reader = "0.4.1"
redb = "2.1.1"
hex = "0.4.3"
rayon = "1.10.0"
